--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>client</name>
 	<description></description>
-
+	<packaging>war</packaging>
 	<properties>
 		<java.version>21</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
@@ -111,6 +111,7 @@
 -->
 	</dependencies>
 	<build>
+		<finalName>client</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -141,6 +142,8 @@
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>2.8.2</version>
 				</plugin>
+				<!--wsimport from wsdl -->
+				<!--
 				<plugin>
 					<groupId>com.sun.xml.ws</groupId>
 					<artifactId>jaxws-maven-plugin</artifactId>
@@ -162,17 +165,19 @@
 						<keep>true</keep>
 						<sourceDestDir>${project.build.sourceDirectory}</sourceDestDir>
 					</configuration>
-				</plugin>
-				<!--test--><!--
+				</plugin>-->
+				<!--test-->
+				<!--connect to tomcat-->
+				<!--
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
 					<configuration>
-						<url>http://localhost:8089/manager/text</url>
+						<url>http://localhost:8005/manager/text</url>
 						<username>tomcat</username>
 						<password>tomcat</password>
-						<path>/books</path>
+						<path>/</path>
 					</configuration>
 				</plugin>-->
 			</plugins>
